--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+jarsExcludedFromWebInfLib=D\:/Samuel/Projects/GooglePlugin/calc/lib/gxt.jar
 warSrcDir=war
 warSrcDirIsOutput=true
