--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -14,6 +14,7 @@
   <servlet-mapping>
     <servlet-name>calcServlet</servlet-name>
     <url-pattern>/calc/tobin</url-pattern>
+    <url-pattern>/calc/getdata</url-pattern>
   </servlet-mapping>
   
   <!-- Default page to serve -->
